--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: fastpages
 description: An easy to use blogging platform with support for Jupyter Notebooks.
 github_username: Autodidact24
 # you can comment the below line out if your repo name is not different than your baseurl
-100-moocs-project"
+github_repo: "100-moocs-project"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
